# onit-labs

./: .env.example  .gitignore  DEMO.md  Dockerfile  Labs_task.txt  README.md  docker-compose.yml  pyproject.toml  ЛР2_ОНИТ.docx  ЛР3_ОНИТ.docx  ЛР4_ОНИТ.docx
.github/workflows/: ci-cd.yml
app/: __init__.py  crud.py  database.py  main.py  models.py
docs/: SECRETS.md  TEORIYA_ONIT.md
lr4/: Dockerfile  docker-compose.yml  nginx.conf  pyproject.toml
lr4/app/: main.py
scripts/: smoke_compose.ps1  smoke_compose.sh
templates/: base.html  form.html  list.html
tests/: conftest.py  test_api.py
